welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:7: error: vuBiscuit is already defined as variable vuBiscuit
def vuBiscuit:Boolean =  {
    ^Program:11: error: reassignment to val
if (vuBiscuit=false) {avance()}
             ^Program:11: error: type mismatch;
 found   : Unit
 required: Boolean
if (vuBiscuit=false) {avance()}
                            ^Program:14: error: reassignment to val
if (vuBiscuit=false) {avance}
             ^Program:13: error: type mismatch;
 found   : Unit
 required: Boolean
for (i <- 1 to 6) {
       ^