welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code


def haveBaggle():Boolean = {
var vuBiscuit:Boolean = false

def vuBiscuit:Boolean =  {
	if (estSurBiscuit) {return true;}
	else {return false;}
}
if (vuBiscuit=false) {avance()}
else 
for (i <- 1 to 6) {
if (vuBiscuit=false) {avance}
else {recule}


}
}